compiler/testData/diagnostics/tests/nullableTypes/nullableArgumentForIn.fir.kt
fun test(x: Int?) {
     <!ARGUMENT_TYPE_MISMATCH!>x<!> in 1..2
}